2010-03-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestIndentationVisitor.cs: Worked
	  on unit tests.

2010-03-09  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj:
	* MonoDevelop.CSharpBinding/TestSpacingVisitor.cs:
	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/TestIndentationVisitor.cs: Added
	  test for 'Bug 586304 - Intellisense does not show several
	  linq extenion methods when using nested generic type'/Worked
	  on formatting tests.

2010-03-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs: Worked
	  on unit tests.

2010-03-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
	  test for 'Bug 585454 - Lacking one reference to an enum
	  type'.

2010-03-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs: Fixed
	  some unit tests

2010-02-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs: Added
	  some formatting tests.

2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs: Added
	  some tests.

2010-02-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DomPersistenceTests.cs: Added attribute
	  persistence test.

	* TestBase.cs:
	* MonoDevelop.AspNet/AspNetTesting.cs:
	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Make
	  sure temp file names are unique in all test fixtures.

2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
	* Mono.TextEditor.Tests/SyntaxHighlightingTests.cs:
	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs:
	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Fixed
	  some unit tests.