@@ -1,3 +1,13 @@
+2010-03-10  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharpBinding/TestIndentationVisitor.cs: Worked
+	  on indentation tests.
+
+	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
+	  unit test for 2nd bug in Bug 586304 - Intellisense does not
+	  show several linq extenion methods when using nested generic
+	  type.
+
 2010-03-09  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharpBinding/TestIndentationVisitor.cs: Worked
